force-app/main/default/objects/VeritivIQ_ProductGrouping_Prod_Cat_Maps__c/VeritivIQ_ProductGrouping_Prod_Cat_Maps__c.object-meta.xml
<CustomObject>
    <description>Stores the same mapping of the ProductGrouping table for easy reference in the Veritiv IQ code base when calling the ProductGrouping, ProductGroupingInsights, and building the OpportunityActivity. If any of those values change in Zilliant, these records will need to change.

Edit 6/22/2017 to replace this same functionality that was previously built in Custom Metadata Types. This current method is not the optimal solution and a more dynamic approach would be a target for a phase two approach pending successful testing.</description>
    <label>VeritivIQ ProductGrouping Prod Cat Map</label>
    <nameField>
        <label>VeritivIQ ProductGrouping Prod Cat Map N</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>VeritivIQ ProductGrouping Prod Cat Maps</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>