force-app/main/default/objects/VeritivIQ_ProductGrouping_Prod_Cat_Maps__c/fields/Opp_Prod_Categories__c.field-meta.xml
<CustomField>
    <fullName>Opp_Prod_Categories__c</fullName>
    <description>Verbatim API values that need to correspond to Opportunity.Prod_Category__c</description>
    <inlineHelpText>Verbatim API values that need to correspond to Opportunity.Prod_Category__c</inlineHelpText>
    <label>Opp Prod Categories</label>
    <length>100</length>
    <type>Text</type>
</CustomField>