force-app/main/default/objects/VeritivIQ_ProductGrouping_Prod_Cat_Maps__c/fields/ProductGroupingDescValue__c.field-meta.xml
<CustomField>
    <fullName>ProductGroupingDescValue__c</fullName>
    <description>ProductGroupingDescValue from the Zilliant ProductGrouping table</description>
    <inlineHelpText>ProductGroupingDescValue from the Zilliant ProductGrouping table</inlineHelpText>
    <label>ProductGroupingDescValue</label>
    <length>100</length>
    <type>Text</type>
</CustomField>