force-app/main/default/objects/VeritivIQ_ProductGrouping_Prod_Cat_Maps__c/fields/ProductGroupingKey__c.field-meta.xml
<CustomField>
    <fullName>ProductGroupingKey__c</fullName>
    <description>ProductGroupingKey value from the Zilliant ProductGrouping table</description>
    <inlineHelpText>ProductGroupingKey value from the Zilliant ProductGrouping table</inlineHelpText>
    <label>ProductGroupingKey</label>
    <length>10</length>
    <type>Text</type>
</CustomField>