force-app/main/default/objects/VeritivIQ_ProductGrouping_Prod_Cat_Maps__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>Opp_Prod_Categories__c</columns>
    <columns>ProductGroupingDescValue__c</columns>
    <columns>ProductGroupingKey__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>